error_msgs.txt
programs/c/data_structures/output_programs/errors/full_linkedlist_3_error.c:1:1: error: unknown type name 'Line'
Line no. 12 :  ; missing
^
programs/c/data_structures/output_programs/errors/full_linkedlist_3_error.c:1:8: error: expected ';' after top level declarator
Line no. 12 :  ; missing
       ^
       ;
programs/c/data_structures/output_programs/errors/full_linkedlist_3_error.c:1:18: error: unknown type name 'missing'
Line no. 12 :  ; missing
                 ^
programs/c/data_structures/output_programs/errors/full_linkedlist_3_error.c:2:5: error: expected ';' after top level declarator
Line no. 17 :  Unknown { found.
    ^
    ;
4 errors generated.
